--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
       Телефон: <b>+79671537749</b>
       <br/>
       E-mail: <i>antsibikova@edu.hse.ru</i>
-    </body>
+   ![][logo]
+
+[logo]: Ig.png "Logo text"
+	</body>
   </html
