--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
       Телефон: <b>+79671537749</b>
       <br/>
       E-mail: <i>antsibikova@edu.hse.ru</i>
-   ![][logo]
-
-[logo]: Ig.png "Logo text"
+<img src="resources/Ig.png" width="200" height="50"/>
 	</body>
   </html
